<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/most_popular"
            android:icon="@android:drawable/presence_video_busy"
            android:title="@string/most_popular"
            android:visible="true"
            app:showAsAction="withText|collapseActionView" />
        <item
            android:id="@+id/highest_rated"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/highest_rated" />
        <item
            android:id="@+id/favorite"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/my_favorite" />
    </group>
</menu>